fix: controller
