# docs/swagger.json
@@ -316,13 +316,6 @@
                 "summary": "Update Products Stock",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "product ID",
-                        "name": "productId",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
                         "description": "Payload to update stock",
                         "name": "payload",
                         "in": "body",
